--- a/style/style.css
+++ b/style/style.css
@@ -1,39 +1,16 @@
 :root {
     --accent: #D7B399;
-}
-
-:root {
-    --dark: #000000;
-}
-
-:root {
+    --dark: #212121;
     --light: #F9F6F1;
-}
+    --grey: #CBCFD4;
+    --light-grey: #F4F4F4;
+    --dark-grey: #8D8D8D;
+    --important: #D84033;
 
-:root {
-    --gray: #CBCFD4;
 }
-
-:root {
-    --light-gray: #f4f4f4;
-}
-
-:root {
-    --dark-gray: #8d8d8d;
-}
-
-:root {
-    --important: #d84033;
-}
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
-
-ul {
-    color: var(--dark);
-}
-
 .page {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -106,43 +83,41 @@ ul {
     font-size: 36px;
     text-transform: uppercase;
 }
-
 .btn {
-    background-color: #D7B399;
-    color: white;
+    background-color: var(--accent);
+    color: #fff;
     font-size: 16px;
     text-transform: uppercase;
     text-decoration: none;
     padding: 18px 28px;
-
-
+}
+.btn-xs {
+    padding: 5px 28px;
 }
 
-.btn-centr {
+.btn-center {
     display: block;
     text-align: center;
-    max-width: 170px;
+    max-width: 168px;
     margin: 0 auto;
 }
-.btn-centr span {
-    margin-right: 15px
-}
 
-.btn-xs {
-    padding: 8px 28px;
+.middle {
+    margin-right: 15px;
 }
 
 .main {
     display: flex;
-    justify-content: space-between;}
+    justify-content: space-between;
+}
 
 .main-item {
     flex: 0 0 50%;
 }
 
-
 .sale-description {
     font-size: 30px;
+    letter-spacing: -0.6px;
 }
 
 .sale-title {
@@ -153,7 +128,7 @@ ul {
 }
 
 .box {
-    position: relative
+    position: relative;
 }
 
 .box-price {
@@ -166,38 +141,33 @@ ul {
 .box-price_old {
     font-size: 24px;
     font-weight: 700;
+
 }
 
 .box-price_new {
-    font-size: 24px;
-    color: var(--important);
-}
-
-.box-price_new {
+    font-size: 42px;
     font-weight: 700;
+    color: var(--important);
+    margin-top: 17px;
 }
-
 .notice {
     text-align: center;
-    color: white;
+    color: #fff;
     padding: 64px 0 54px;
-
 }
-
 .notice-title {
     font-size: 30px;
     text-transform: uppercase;
-    font-weight: 400;}
-
-.notice-title span {
-    font-weight: 700
+    font-weight: 400;
 }
-
 
 .notice-description {
     font-size: 21px;
 }
 
+span {
+    font-weight: 700;
+}
 .collection {
     display: flex;
     justify-content: space-between;
@@ -212,15 +182,6 @@ ul {
     background-size: 190px 171px;
 }
 
-.collection-man {
-    background-image: url("../img/man.png");
-}
-
-.collection-woman {
-    background-image: url("../img/woman.png");
-
-}
-
 .collection-title {
     font-size: 24px;
     font-weight: 300;
@@ -231,36 +192,55 @@ ul {
     font-size: 16px;
     margin-bottom: 43px;
 }
+.collection-man {
+    background-image: url("../img/man.png");
+}
 
+.collection-woman {
+    background-image: url("../img/woman.png");
+
+}
 .product {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 103px;
+    margin-bottom: 100px;
 }
-
+.product-title {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+.product-price {
+    color: var(--accent);
+    font-size: 18px;
+    font-weight: 700;
+}
 .product-item {
-    flex: 0 0 24%;
+    flex: 0 0 23%;
     position: relative;
-}
-
-
-.product-item::before, ::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 25px;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .product-item::before {
-    background-image: url("../img/Line.svg");
+    background-image: url("../img/item-top.svg");
+    content: '';
+    display: block;
+    width: 100%;
+    height: 25px;
+
 }
 
 .product-item::after {
     background-image: url("../img/ma.svg");
+    content: '';
+    display: block;
+    width: 100%;
+    height: 25px;
+
 }
 
 
@@ -284,37 +264,33 @@ ul {
     justify-content: space-between;
     padding: 30px 0;
 }
-
+.footer-list-item {
+    margin-bottom: 10px;
+}
 .footer-logo {
     flex: 0 0 40%;
-
 }
 
 .footer-nav {
     flex: 0 0 60%;
     display: flex;
     justify-content: space-between;
-    color: white;
+    color: #fff;
 }
 
 .footer-list {
     list-style-type: none;
     padding-left: 0;
-
 }
-
+.footer-list-link {
+    color: var(--grey);
+    text-decoration: none;
+    font-size: 14px;
+}
 .footer-list-title {
     font-size: 10px;
     font-weight: 700;
-
 }
-
-.footer-list-item {
-    margin-bottom: 10px;
-}
-
-.footer-list-link {
-    color: var(--gray);
-    text-decoration: none;
-    font-size: 14px;
+.link-img {
+    margin-right: 4px;
 }
